apps/mixtape/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mixtape
  namespace: mixtape
spec:
  selector: { app: mixtape }
  ports:
    - name: http
      port: 80
      targetPort: 3000
